# botgameline

./: README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
botgameline/: __init__.py  __main__.py  game.py  lat.py
botgameline/core/: __init__.py
botgameline/data/: quest.txt
botgameline/linepy/: __init__.py  auth.py  client.py  config.py
botgameline/zalgo/: __init__.py
docs/source/: conf.py  index.rst
tests/: game.py  lat.py  test.py  test2.py  test3.py
