[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "botgameline"
authors = [
    {name = "mukharomdev", email = "mukharomdev@gmail.com"},
]
description = "Paket python ini hanya sebagai template belajar bot menggunakan platform line"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["learn", "python"]
license = {text = "MIT license"}
classifiers = [
	"Basic Learn :: Python",
    "Python::3",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "humanize",
	"requests",
	"six",
	"rsa",
	"bs4",
	"schematics",
	"humanfriendly",
	"gtts",
	"googletrans",
	"wikiapi"	,
    'importlib-metadata; python_version >="3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# script = "learnpython.module:function"