[metadata]
name = botgameline
version = 0.0.1
author	= mukharomdev
author_email = mukharomdev@gmail.com
description	 = Hanya packages untuk latihan belajar python dengan membuat bot melalui platform line
long_description = file:README.rst
url = https://github.com/mukharomdev/botgameline.git
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    requests
    humanize
	six
	rsa
	bs4
	schematics
	humanfriendly
	gtts
	googletrans
	wikiapi
    importlib-metadata; python_version >= "3.8"
packages = botgameline
packages_dir =
	=botgameline
python_requires = >=3.8

[options.packages.find]
where = botgameline
include = botgameline*
exclude =
	build*
	dist*
	docs*
	tests*
	*.tests
	*.tests.*
	tools*
	pkg_sources*
	.env*
